# technicalwriting.dev

./: .gitignore  404.rst  BUILD.bazel  CLAUDE.md  Makefile  README.md  about.rst  bazel-bin  bazel-dev  bazel-out  bazel-testlogs  blogroll.rst  build.fish  build.sh  conf.py  discovered-not-indexed.rst  genai-outlook-2023.rst  huggingface.rst  index.rst  link-text-automation.rst  methodology.rst  playing-nicely.rst  plugins.rst  principles.rst  requirements.txt  rss.xml  searchbox.rst  searchboxes.rst  sentry-overflow.rst  stateful-assistants.rst  style-guide-fine-tuning.rst
.github/workflows/: deploy.yml  website.yml
_extensions/: sitemap.py
_static/: base.css  dark.css  main.css  metadata.json  searchtools.txt  technicalwritingdev.css
_templates/: layout.html
a11y/: skip.rst
agents/: colocate.txt  index.rst
ai/: index.rst  tokens.py  tokens.rst
ai/agents/: colocate.rst  index.rst  searchtools.md
ai/rag/: bookmarks.rst
analytics/: index.rst  sheets.rst
archives/a11y/: skip.rst
archives/ml/: plugins.rst
archives/seo/: discovered-not-indexed.rst  sentry-overflow.rst
archives/ux/: methodology.rst  offline.rst  searchboxes.rst
automation/: index.rst
blog/: index.rst  searchbars.rst
dad/: intertwingularity.rst
data/: anchors.rst  embeddings.rst  index.rst  intertwingularity.rst
embeddings/: bookmarks.rst  index.rst  underrated.rst  vectors.rst
embeddings/tasks/: index.rst  variance.py
ia/: flutter.rst
links/: automation.rst  index.rst  intertwingularity.rst
ml/: evals.rst  gn.rst  huggingface.rst  hyperlint.rst  index.rst  outlook-2023.rst  outlook-2024.rst  playing-nicely.rst  plugins.rst  principles.rst  products.rst  stateful-assistants.rst
ml/embeddings/: bookmarks.rst  tasks.py  tasks.rst  vectors.rst
ml/embeddings/tasks/: clusters.py  index.rst  variance.py
ml/outlooks/: 2023.rst  2024.rst
ml/pocketflow/: index.rst
ml/pocketflow/microbit/: 03_display_.md  05_hal__hardware_abstraction_layer__.md  diff.txt  index.md
ml/pocketflow/microbit/v1/: 04_gpio__general_purpose_input_output__pins_.md  1.md  2.md  3.md  4.md  5.md  index.md
ml/pocketflow/microbit/v2/: 03_non_blocking_display_.md  05_hal__hardware_abstraction_layer__.md  1.md  2.md  3.md  4.md  5.md  6.md  index.md
ml/reviews/: 2023.rst  2024.rst
sphinx/: bazel.rst  faq.rst  index.rst  search.rst
sphinx/bazel/: context.rst  incremental.rst  tutorial.rst
src/: verbatim-wrangling.rst
strategy/: challenges.rst  decisions.rst  index.rst
tutorials/: sphazel.rst  sphinx-bazel.rst
txt/: verbatim-wrangling.rst
ux/: offline.rst  pdf.rst  searchboxes.rst  zephyr.rst
www/: pdf.rst
