load("@rules_python//sphinxdocs:sphinx.bzl", "sphinx_build_binary", "sphinx_docs")
load("@rules_python//sphinxdocs:sphinx_docs_library.bzl", "sphinx_docs_library")

sphinx_build_binary(
    name = "sphinx",
    deps = [
        "@pypi//matplotlib",
        "@pypi//networkx",
        "@pypi//sphinx",
        "@pypi//sphinx_copybutton",
        "@pypi//sphinx_reredirects",
    ]
)

sphinx_docs_library(
    name = "sources",
    srcs = [
        "_extensions/sitemap.py",
        "_static/searchtools.md",
        "_static/searchtools.txt",
        "_static/base.css",
        "_static/boat.png",
        "_static/dark.css",
        "_static/github.png",
        "_static/linkcheck.png",
        "_static/linkcheck-details.png",
        "_static/linter.jpg",
        "_static/logo.svg",
        "_static/mathjax.js",
        "_static/mindblown.gif",
        "_static/namespace.png",
        "_static/sheets.png",
        "_static/singularity.png",
        "_static/spaces.png",
        "_static/summary.png",
        "_templates/layout.html",
        "404.rst",
        "about.rst",
        "agents/agents.png",
        "agents/colocate.rst",
        "agents/colocate.txt",
        "agents/index.rst",
        "analytics/index.rst",
        "analytics/sheets.rst",
        "automation/index.rst",
        "automation/gn.rst",
        "embeddings/bookmarks.rst",
        "embeddings/index.rst",
        "embeddings/tasks/clusters.py",
        "embeddings/tasks/index.rst",
        "embeddings/tasks/variance.py",
        "embeddings/underrated.rst",
        "index.rst",
        "links/automation.rst",
        "links/index.rst",
        "links/intertwingularity.rst",
        "links/pdf.rst",
        "rss.xml",
        "sphinx/bazel/context.rst",
        "sphinx/bazel/tutorial.rst",
        "sphinx/index.rst",
        "sphinx/search.rst",
        "strategy/challenges.rst",
        "strategy/decisions.rst",
        "strategy/index.rst",
    ],
)

sphinx_docs(
    name = "website",
    config = "conf.py",
    formats = [
        "html",
    ],
    sphinx = ":sphinx",
    deps = [
        ":sources",
    ],
    extra_opts = [
        "--fail-on-warning",
    ],
)
